fix admin startup